--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,14 @@ backend/.openzeppelin/
 *.sol.js
 
 # Logs
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 pnpm-debug.log*
+logs/
+*.log
 
 # OS files
 .DS_Store
