Add package-lock.json to gitignore and remove from repository

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 node_modules/
 /.pnp
 .pnp.js
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Testing
 /coverage
@@ -39,8 +42,6 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 pnpm-debug.log*
-logs/
-*.log
 
 # OS files
 .DS_Store
