--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "compile:contract": "npx hardhat compile",
     "deploy:local": "npx hardhat run scripts/deploy.js --network localhost",
     "deploy:hardhat": "npx hardhat run scripts/deploy-hardhat.js --network hardhat",
-    "test:contract": "npx hardhat test"
+    "test:contract": "npx hardhat test",
+    "test:backend": "mocha test/services/**/*.test.js test/integration/**/*.test.js --timeout 30000",
+    "test:all": "npm run test:contract && npm run test:backend"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
@@ -24,8 +26,12 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "chai": "^4.3.10",
     "hardhat": "^2.19.4",
-    "nodemon": "^3.0.2"
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.2",
+    "sinon": "^17.0.1",
+    "supertest": "^6.3.3"
   },
   "keywords": [
     "blockchain",
