Add comprehensive testing infrastructure
- Frontend Testing:
  - Set up Jest with React Testing Library and MSW for API mocking
  - Created test utilities (mock-wallet, mock-api, mock-contract)
  - Added component tests for wallet connector, consent dialog, hooks, and utilities
  - Configured Playwright for E2E testing with wallet connection, consent granting, and navigation tests

- Backend Testing:
  - Added integration tests for patient routes, provider routes, and health/info endpoints
  - Expanded test coverage for all API endpoints

- Smart Contract Testing:
  - Added comprehensive gas benchmarks comparing single vs batch operations
  - Added stress tests for maximum batch size, many consents per patient, concurrent operations, and long strings

- Master Test Script:
  - Created test-all.sh script to run all test suites
  - Updated package.json with test scripts for easy execution

- Documentation:
  - Created comprehensive TESTING.md guide
  - Added example test files
  - Updated READMEs with testing sections

Test coverage goals:
- Smart Contracts: 95%+ (maintained)
- Backend: 80%+ (target)
- Frontend: 70%+ (target)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm start",
-    "compile:contract": "cd backend && npm run compile:contract"
+    "compile:contract": "cd backend && npm run compile:contract",
+    "test:all": "bash scripts/test-all.sh",
+    "test:contract": "cd backend && npm test",
+    "test:backend": "cd backend && npm test",
+    "test:frontend": "cd frontend && npm test",
+    "test:e2e": "cd frontend && npm run test:e2e",
+    "test:coverage": "cd backend && npm test -- --coverage && cd ../frontend && npm run test:coverage"
   },
   "keywords": [
     "blockchain",
