--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "ethereum"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
+  }
 }
 
