--- a/backend/package.json
+++ b/backend/package.json
@@ -25,14 +25,27 @@
     "web3": "^4.3.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^3.1.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.2",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.1.3",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.10",
     "chai": "^4.3.10",
     "hardhat": "^2.19.4",
+    "hardhat-gas-reporter": "^1.0.10",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
     "sinon": "^17.0.1",
     "sinon-chai": "^3.7.0",
-    "supertest": "^6.3.3"
+    "solidity-coverage": "^0.8.16",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.9.3"
   },
   "keywords": [
     "blockchain",
