--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "redis": "^4.6.12",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "web3": "^4.3.0"
