--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
     "axios": "^1.13.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
     "redis": "^4.6.12",
     "socket.io": "^4.8.1",
