--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@openzeppelin/contracts": "^5.0.1",
     "axios": "^1.13.2",
     "compression": "^1.8.1",
+    "connect-timeout": "^1.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
