--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "redis": "^4.6.12",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "web3": "^4.3.0"
+    "web3": "^4.3.0",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
